cpp/test/Slice/errorDetection/RedefinitionAsClass.err
RedefinitionAsClass.ice:12 error: declaration of already defined `Vector1' as class
RedefinitionAsClass.ice:15 error: redefinition of `Vector2' as class
