cpp/test/Slice/errorDetection/RedefinitionAsClass.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

vector<int> Vector1;
class Vector1;

vector<int> Vector2;
class Vector2 { };
